--- a/.github/manifests/deployment.yaml
+++ b/.github/manifests/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: myapp
-  namespace: gke-golang
+  namespace: backend
 spec:
   selector:
     matchLabels:
